--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             mission, Quantum Computing, 6G/Telecom R&D and Startup Ecosystem.</p>
 
           <div class="mt-12 flex flex-wrap gap-6 max-lg:justify-center">
-            <button type='button'
+            <button type='button' onclick="window.location.href = './pages/tech/tech.html';"
               class="bg-indigo-600 hover:bg-indigo-700 border border-indigo-700 transition-all text-base text-white font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Explore</button>
             <button type='button'
               onclick="window.open('https://www.digitalindia.gov.in/emerging-technology/', '_blank')"
@@ -205,7 +205,7 @@
             electronics supply chain, covering Fabs(Manufacturing) and ATMP(Packaging).
           </p>
           <div class="mt-12 flex flex-wrap gap-6 max-lg:justify-center">
-            <button type='button'
+            <button type='button' onclick="window.location.href = './pages/ism/ism.html';"
               class="bg-indigo-600 hover:bg-indigo-700 border border-indigo-700 transition-all text-base text-white font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Explore</button>
             <button type='button' onclick="window.open('https://ism.gov.in/', '_blank')"
               class="bg-transparent hover:bg-slate-100 border border-indigo-700 transition-all text-base text-slate-900 font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Official
@@ -242,7 +242,7 @@
             villages), Vande Bharat(Railways), BharatMala(Highways), and Data Center expansion.</p>
 
           <div class="mt-12 flex flex-wrap gap-6 max-lg:justify-center">
-            <button type='button'
+            <button type='button' onclick="window.location.href = './pages/natinfra/natinfra.html';"
               class="bg-indigo-600 hover:bg-indigo-700 border border-indigo-700 transition-all text-base text-white font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Explore</button>
           </div>
           <div class="mt-12 flex flex-wrap gap-x-8 gap-y-6">
@@ -271,7 +271,7 @@
             Digital India Bill(DIB), Digital Personal Data Protection Act(DPDP Act), and Mission Karmayogi.
           </p>
           <div class="mt-12 flex flex-wrap gap-6 max-lg:justify-center">
-            <button type='button'
+            <button type='button' onclick="window.location.href = './pages/polgov/polgov.html';"
               class="bg-indigo-600 hover:bg-indigo-700 border border-indigo-700 transition-all text-base text-white font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Explore</button>
           </div>
           <div class="mt-12 flex flex-wrap gap-x-8 gap-y-6">
@@ -304,7 +304,7 @@
             Bharat Digital Mission(Health), DIKSHA(Education), and E-Courts.</p>
 
           <div class="mt-12 flex flex-wrap gap-6 max-lg:justify-center">
-            <button type='button'
+            <button type='button' onclick="window.location.href = './pages/sectdig/sectdig.html';"
               class="bg-indigo-600 hover:bg-indigo-700 border border-indigo-700 transition-all text-base text-white font-medium rounded-full px-6 py-3 cursor-pointer outline-0">Explore</button>
           </div>
           <div class="mt-12 flex flex-wrap gap-x-8 gap-y-6">
@@ -436,5 +436,6 @@
 
   <script src="./script.js"></script>
 </body>
+
 
 </html>
