--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
           <ul class="mt-6 space-y-4">
             <li>
-              <a href="https://www.npci.org.in/product/uhttpspi" href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">UPI</a>
+              <a href="https://www.npci.org.in/product/upi" href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">UPI</a>
             </li>
             <li>
               <a href='https://uidai.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Aadhaar</a>
@@ -431,4 +431,5 @@
 
 
 </html>
+
 
