--- a/pages/dpi/diginfra.html
+++ b/pages/dpi/diginfra.html
@@ -191,7 +191,7 @@
                         <h3 class="text-lg font-semibold text-slate-900 mb-3">Unified Payments Interface (UPI)</h3>
                         <p class="text-slate-600 text-[15px] leading-relaxed line-clamp-2">Instant, real-time bank
                             payments via a mobile phone application.</p>
-                        <a onclick="window.open('https://www.npci.org.in/product/uhttpspi', '_blank')"
+                        <a onclick="window.open('https://www.npci.org.in/product/upi', '_blank')"
                             class="mt-6 inline-block px-4 py-1.5 tracking-wider bg-purple-600 hover:bg-purple-700 text-white text-sm font-medium">Read
                             More</a>
                     </div>
