--- a/pages/dpi/diginfra.html
+++ b/pages/dpi/diginfra.html
@@ -256,7 +256,7 @@
         </div>
     </div>
 
-    <footer class="tracking-wide bg-slate-100 px-8 sm:px-12 pt-12 pb-6">
+<footer class="tracking-wide bg-slate-100 px-8 sm:px-12 pt-12 pb-6">
     <div class="grid min-[1200px]:grid-cols-3 gap-12 xl:gap-16">
       <div class="min-[1200px]:max-w-sm max-w-lg w-full">
         <a href='javascript:void(0)'>
@@ -270,81 +270,81 @@
 
       <div class="min-[1200px]:col-span-2 grid sm:grid-cols-2 lg:grid-cols-6 gap-8">
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">DPI</h4>
+          <a href="./pages/dpi/diginfra.html" class="text-slate-900 font-semibold text-base relative">DPI</a>
 
           <ul class="mt-6 space-y-4">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">UPI</a>
+              <a href="https://www.npci.org.in/product/upi" href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">UPI</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Aadhaar</a>
+              <a href='https://uidai.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Aadhaar</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DigiLocker</a>
+              <a href='https://www.digilocker.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DigiLocker</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">ONDC</a>
+              <a href='https://ondc.org/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">ONDC</a>
             </li>
           </ul>
         </div>
 
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">Technology</h4>
+          <a href="./pages/tech/tech.html" class="text-slate-900 font-semibold text-base relative">Technology</a>
 
           <ul class="mt-6 space-y-4">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">India Ai</a>
+              <a href='https://indiaai.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">India Ai</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DOT</a>
+              <a href='https://dot.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DOT</a>
             </li>
           </ul>
         </div>
 
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">ISM</h4>
+          <a href="./pages/ism/ism.html" class="text-slate-900 font-semibold text-base relative">ISM</a>
 
           <ul class="mt-6 space-y-4">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Mission</a>
+              <a href='https://ism.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Mission</a>
             </li>
           </ul>
         </div>
 
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">Infrastructure</h4>
+          <a href="./pages/natinfra/natinfra.html" class="text-slate-900 font-semibold text-base relative">Infrastructure</a>
           <ul class="space-y-4 mt-6">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">BharatNet</a>
+              <a href='https://usof.gov.in/en/bharatnet-project' class="hover:text-slate-900 text-slate-600 text-sm font-normal">BharatNet</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Vande Bharat</a>
+              <a href='https://nr.indianrailways.gov.in/view_section.jsp?id=0,6,303,1721&lang=0' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Vande Bharat</a>
             </li>
           </ul>
         </div>
 
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">Policies</h4>
+          <a href="./pages/polgov/polgov.html" class="text-slate-900 font-semibold text-base relative">Policies</a>
 
           <ul class="space-y-4 mt-6">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Karmayogi Bharat</a>
+              <a href='https://igotkarmayogi.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Karmayogi Bharat</a>
             </li>
           </ul>
         </div>
 
         <div class="max-lg:min-w-[80px]">
-          <h4 class="text-slate-900 font-semibold text-base relative">Sectoral Digitalization</h4>
+          <a href="./pages/sectdig/sectdig.html" class="text-slate-900 font-semibold text-base relative">Digitalization</a>
 
           <ul class="space-y-4 mt-6">
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Ayushman Bharat</a>
+              <a href='https://abdm.gov.in/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">Ayushman Bharat</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DIKSHA</a>
+              <a href='https://diksha.gov.in' class="hover:text-slate-900 text-slate-600 text-sm font-normal">DIKSHA</a>
             </li>
             <li>
-              <a href='javascript:void(0)' class="hover:text-slate-900 text-slate-600 text-sm font-normal">eCourts</a>
+              <a href='https://ecourts.gov.in/ecourts_home/' class="hover:text-slate-900 text-slate-600 text-sm font-normal">eCourts</a>
             </li>
           </ul>
         </div>
